Correct license test expectations
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/public-domain.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/public-domain.txt.yml
@@ -2,7 +2,7 @@ license_expressions:
   - public-domain
   - public-domain
   - public-domain
-  - public-domain
+  - unknown-license-reference
   - public-domain
   - public-domain
   - public-domain
