Make the Dockerfile work #2554 #2762
The dockerfile is now updated with the latest approach and is tested to
work.

Reference: https://github.com/nexB/scancode-toolkit/issues/2762
Reference: https://github.com/nexB/scancode-toolkit/issues/2554
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -12,3 +12,15 @@ Dockerfile
 tests/
 docs/
 samples/
+venv/
+tmp/
+.cache/
+.pytest_cache/
+.settings/
+docs/
+build/
+dist/
+
+# generated files
+**/*.pyc
+src/licensedcode/data/cache/license_index/index_cache
